--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,6 +8,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  background-position-x: -110px;
+  background-position-y: 62px;
 }
 .home img {
   width: 35%;
@@ -24,4 +26,26 @@
 }
 .btn:hover {
   background: #f45875;
+}
+@media only screen and (max-width: 600px) {
+  .home {
+    width: 255vw;
+    background-image: url(../../Images/Team-mobile.png);
+    background-size: 290vw;
+    height: 93vh;
+  }
+  .home img {
+  }
+  .white {
+    width: 255vw;
+  }
+  .dark {
+    width: 255vw;
+  }
+  #kayotica {
+    width: 524px;
+  }
+  p {
+    font-size: 32px;
+  }
 }
