--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -74,7 +74,7 @@
     margin: 1rem;
   }
   #team {
-    height: 300vh;
+    height: 320vh;
   }
   .team {
     height: 86%;
@@ -96,10 +96,11 @@
     flex-direction: column;
   }
   .footer {
-    height: 120vh;
+    height: 94vh;
   }
   .companie {
     margin-top: 20px;
+    height: 75vh;
   }
   .companie img {
     width: 270px;
@@ -120,8 +121,9 @@
     font-size: 28px;
   }
   .link-foot {
-    height: 100%;
+    height: 90%;
     width: 100%;
     align-items: center;
+    margin-bottom: 17px;
   }
 }
